--- a/src/Components/Works/work/work.module.css
+++ b/src/Components/Works/work/work.module.css
@@ -5,7 +5,7 @@
 .main{
     width: 80%;
     margin: 0 auto;
-    margin-top: 25px;
+    margin-bottom: 25px;
     background: rgb(255, 255, 255, .07);
     padding-left: 25px;
     padding-right: 25px;
@@ -13,12 +13,19 @@
     padding-bottom: 20px;
     color: white;
     height: 120px;
-    transition: all 0.25s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .main:hover{
     transform: scale(1.07);
+    opacity: 1;
     /* background: black; */
+}
+
+.main:hover .title p, .main:hover .talks, .main:hover .links{
+    opacity: 1;
+    transition: opacity 0.3s ease-out;
+    font-weight: bolder;
 }
 
 .title{
@@ -27,11 +34,23 @@
 
 .title p{
     font-size: 11px;
+    /* font-weight: bold; */
+    opacity: 0.5;
+    transition: all 0.3s ease-in-out;
 }
 
 .talks{
     margin-top: 20px;
+    /* font-weight: bold; */
     margin-bottom: 20px;
+    opacity: 0.7;
+    transition: all 0.3s ease-in-out;
+}
+
+.links{
+    opacity: 0.5;
+    /* font-weight: bold; */
+    transition: all 0.3s ease-in-out;
 }
 
 .links a{
