--- a/src/Components/Info/info.module.css
+++ b/src/Components/Info/info.module.css
@@ -14,7 +14,7 @@
 .left{
     width: 40%;
     margin: 0 auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .left h1{
@@ -24,19 +24,38 @@
 
 .left p{
     width: 80%;
+    font-size: 13px;
 }
 
 .right{
     width: 55%;
     margin: 0 auto;
-    border: 1px solid red;
+    overflow: hidden auto;
+    height: 100%;
+    max-height: 85vh;
+
+    /* border: 1px solid red; */
+}
+.right::-webkit-scrollbar{
+    width: 5px;
+    height: 0px;
+}
+
+.right::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
+}
+
+.right::-webkit-scrollbar-thumb{
+    background: rgb(255, 2555, 255, .5);
+    border-radius: 5px;
 }
 
 .btns{
     display: flex;
     flex-direction: column;
     width: 200px;
-    margin-top: 300px;
+    margin-top: 250px;
 }
 
 .btns button{
@@ -51,13 +70,14 @@
     align-items: center;
     justify-content: space-between;
     background: none;
-    transition: all 0.7s ease;
+    transition: all 0.5s ease;
+    opacity: 0.4;
 }
 
 .btns button div{
     width: 10px;
     border: 1px solid white;
-    transition: all 0.7s ease;
+    transition: all 0.5s ease;
 }
 
 /* Hovering styling */
@@ -65,12 +85,13 @@
 .btns button:hover div{
     width: 35px;
     /* transition-duration: 00.5s; */
-    transition: width 0.7s ease-out;
+    transition: width 0.5s ease-out;
 }
 
 .btns button:hover{
     width: 140px;
-    transition: width 0.7s ease-out;
+    transition: width 0.5s ease-out;
+    opacity: 1;
     /* -webkit-transition: background-color 2s ease-out;
     -moz-transition: background-color 2s ease-out;
     -o-transition: background-color 2s ease-out;
@@ -81,6 +102,7 @@
 
 .btns button:focus{
     width: 140px;
+    opacity: 1;
 }
 
 .btns button:focus div{
