--- a/src/Components/Works/work/work.module.css
+++ b/src/Components/Works/work/work.module.css
@@ -14,6 +14,7 @@
     color: white;
     height: 120px;
     transition: all 0.3s ease-in-out;
+    border-radius: 5px;
 }
 
 .main:hover{
@@ -51,6 +52,10 @@
     opacity: 0.5;
     /* font-weight: bold; */
     transition: all 0.3s ease-in-out;
+    display: flex;
+    /* border: 2px solid red; */
+    width: 100px;
+    justify-content: space-between;
 }
 
 .links a{
